chore: font adjustment and fix to alignment of items

--- a/styles.css
+++ b/styles.css
@@ -137,12 +137,20 @@ body {
   color: #0c85e9;
 }
 
+section {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .frame {
   margin: 1rem;
-  align-content: center;
   width: 80%;
-  background-color: #022038;
+  display: inline-block;
+  flex-direction: column;
+  background-color: transparent;
   color: White;
+  font-family: Ubuntu;
   border: 3px solid #0c85e9;
 }
 
@@ -151,6 +159,7 @@ body {
   display: inline-block;
   flex-direction: row;
   width: 25%;
+  font-family: Ubuntu;
   background-color: #022038;
   color: White;
   font-size: xx-small;
@@ -161,6 +170,7 @@ header {
   font-size: x-large;
   font-style: bold;
   color: White;
+  font-family: Ubuntu;
   text-align: center;
   background-image: linear-gradient(
     to right,
@@ -173,6 +183,7 @@ header {
 h1 {
   margin-left: 1rem;
   font-size: large;
+  font-family: Ubuntu;
   color: White;
   background-image: linear-gradient(to right, #0c85e9, transparent);
 }
@@ -187,6 +198,7 @@ hr {
 button {
   margin: 1rem;
   display: flex;
+  font-family: Ubuntu;
   text-transform: uppercase;
   background-color: transparent;
   border-color: white;
